<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TableLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:background="@android:color/white"
android:layout_margin="0dp">
    <TableRow
        android:background="@color/purple">
       <TextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/reccol1"
           android:textColor="@android:color/white"
           android:padding="10sp"
           android:textSize="14sp"
           android:layout_weight="2"
           android:gravity="center_horizontal"
           ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reccol2"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reccol3"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reccol4"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
<TableRow>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recrow1ID"
        android:padding="10sp"
        android:textSize="12sp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        ></TextView>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recrow1SN"
        android:padding="10sp"
        android:textSize="14sp"
        android:layout_weight="6"
        android:gravity="center_horizontal"
        ></TextView>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recrow1Date"
        android:padding="10sp"
        android:textSize="14sp"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        ></TextView>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/recrow1Status"
        android:textColor="@color/colorgreen"
        android:padding="10sp"
        android:textSize="14sp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow2ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow2SN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow2Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow2Status"
            android:textColor="@color/colorgreen"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow3ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow3SN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow3Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow3Status"
            android:textColor="@color/colorgreen"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow4ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow4SN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow4Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow4Status"
            android:textColor="@color/colorgreen"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow5ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow5SN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow5Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow5Status"
            android:textColor="@color/red"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow6ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow6SN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow6Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow6Status"
            android:textColor="@color/red"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow7ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow7SN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow7Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recrow7Status"
            android:textColor="@color/red"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <!-- Add more TableRows for additional rows in the table -->

</TableLayout>

    <Button
        android:id="@+id/recbtn1"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:text="+"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp" />
</RelativeLayout>

