<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_margin="0dp">
    <TableRow
        android:background="@color/purple">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relcol1"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relcol2"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relcol3"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relcol4"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow1ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow1CN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow1Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow1Status"
            android:textColor="@color/colorgreen"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow2ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow2CN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow2Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow2Status"
            android:textColor="@color/colorgreen"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow3ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow3CN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow3Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow3Status"
            android:textColor="@color/colorgreen"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow4ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow4CN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow4Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow4Status"
            android:textColor="@color/colorgreen"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow5ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow5CN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow5Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow5Status"
            android:textColor="@color/red"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow6ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow6CN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow6Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow6Status"
            android:textColor="@color/red"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow7ID"
            android:padding="10sp"
            android:textSize="12sp"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow7CN"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="6"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow7Date"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            ></TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/relrow7Status"
            android:textColor="@color/red"
            android:padding="10sp"
            android:textSize="14sp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            ></TextView>
    </TableRow>
    <!-- Add more TableRows for additional rows in the table -->

</TableLayout>
<Button
android:id="@+id/relbtn1"
android:layout_width="55dp"
android:layout_height="55dp"
android:text="+"
android:textAlignment="center"
android:textStyle="bold"
android:layout_alignParentBottom="true"
android:layout_alignParentEnd="true"
android:layout_margin="16dp" />
</RelativeLayout>